--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,8 @@
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.1",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "swiper": "^11.1.5"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
