--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "start": "node server/app.sj",
-    "dev": "nodemon server/app.js"
+    "start": "node server/app.js",
+    "server": "nodemon server/app.js",
+    "client": "npm run dev --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "keywords": [],
   "author": "tamirat kebede",
@@ -14,6 +16,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "concurrently": "^8.2.2",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
