--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,8 @@
     "@reduxjs/toolkit": "^2.2.6",
     "axios": "^1.7.2",
     "firebase": "^10.12.4",
+    "flowbite-react": "^0.10.1",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
