--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.1",
     "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.7.5",
     "swiper": "^11.1.5"
   },
   "devDependencies": {
