--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mern-real-state": "file:",
     "mongoose": "^8.5.1",
     "multer": "^1.4.5-lts.1",
+    "socket.io": "^4.7.5",
     "uuid": "^10.0.0"
   }
 }
