--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node server/app.js",
     "server": "nodemon server/app.js",
     "client": "npm run dev --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "build" : "cd client && npm run build"
   },
   "keywords": [],
   "author": "tamirat kebede",
