--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "server": "nodemon server/app.js",
     "client": "npm run dev --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "build" : "cd client && npm run build"
+    "build" : "cd client && npm install &&  npm run build"
   },
   "keywords": [],
   "author": "tamirat kebede",
